<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.pawras.mindful.activities.MenuPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/square1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq1"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq12"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq21"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq22"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq23"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square6"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq31"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square7"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq32"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square8"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq33"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square9"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq41"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square10"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq5"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/square11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/holo_btn"
            android:onClick="openHistory"
            android:text="@string/sq6"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>