<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context="com.pawras.mindful.activities.MenuPage">

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/menu_1"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:onClick="openDate"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/histry"
        android:text="@string/menu_2"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:onClick="openHistory"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:id="@+id/thirdMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/menu_3"
        android:textAllCaps="false"
        android:onClick="openPDF"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:id="@+id/fourthdMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/menu_4"
        android:textAllCaps="false"
        android:onClick="openPDF"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/menu_5"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:onClick="openCourse"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/menu_6"
        android:textAllCaps="false"
        android:onClick="onLineCoaching"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
</LinearLayout>
