<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.pawras.mindful.activities.HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:text="@string/sq1"
                android:layout_marginRight="20dp"
                android:textAllCaps="false"
                android:onClick="openTwoSquare"
                android:textColor="@android:color/white"
                android:background="@drawable/holo_btn"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:text="@string/sq2"
                android:textAllCaps="false"
                android:onClick="openSecondSquare"
                android:textColor="@android:color/white"
                android:layout_marginLeft="20dp"
                android:background="@drawable/holo_btn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:text="@string/sq3"
                android:textColor="@android:color/white"
                android:layout_marginRight="20dp"
                android:onClick="openThirdSquare"
                android:textAllCaps="false"
                android:background="@drawable/holo_btn"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:text="@string/sq4"
                android:textAllCaps="false"
                android:onClick="openFourthSquare"
                android:textColor="@android:color/white"
                android:layout_marginLeft="20dp"
                android:background="@drawable/holo_btn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:text="@string/sq5"
                android:textAllCaps="false"
                android:onClick="openFifthSquare"
                android:textColor="@android:color/white"
                android:layout_marginRight="20dp"
                android:background="@drawable/holo_btn"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:text="@string/sq6"
                android:textAllCaps="false"
                android:onClick="openSixthSquare"
                android:textColor="@android:color/white"
                android:layout_marginLeft="20dp"
                android:background="@drawable/holo_btn"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
