<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.pawras.mindful.activities.squares.FirstSquare">

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/sq21"
        android:text="@string/sq21"
        android:textAllCaps="false"
        android:onClick="openEnterTextScreen"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/sq22"
        android:text="@string/sq22"
        android:textAllCaps="false"
        android:onClick="openEnterTextScreen"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/sq23"
        android:text="@string/sq23"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:onClick="openEnterTextScreen"
        android:textColor="@android:color/white"
        android:background="@drawable/holo_btn"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="70dp"-->
        <!--android:id="@+id/sq24"-->
        <!--android:text="@string/sq24"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:textAllCaps="false"-->
        <!--android:onClick="openEnterTextScreen"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:background="@drawable/holo_btn"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:layout_marginRight="50dp"/>-->

</LinearLayout>
